Completed basic landing page

--- a/index.html
+++ b/index.html
@@ -10,26 +10,46 @@
 <body>
     <div class="header">
         <div class="header-bar">
-            <div class="header-bar-logo">Logo</div>
+            <!-- TO-DO Add Logo later -->
+            <div class="header-bar-logo">
+                <img src="images/logo-website.png" alt="">
+            </div>
             <div class="header-bar-right">
-                <a href="#">Link One</a>
-                <a href="#">Link Two</a>
-                <a href="#">Link Three</a>
+                <a href="https://github.com/ggopalai" target="_blank"><img src="images/logo-github.png" alt=""></a>
+                <a href="https://www.linkedin.com/in/gdgopalaiah-26/" target="_blank"><img src="images/logo-linkedin.png" alt=""></a>
+                <a href="https://www.instagram.com/_gagan26/" target="_blank"><img src="images/logo-instagram.png" alt=""></a>
             </div>
         </div>
         <div class="header-second">
-            <div class="header-second-info"> <span id="header-main-text">Welcome to Memories</span> <br> <span>Your world, my lens.</span> <br> <button>Sign Up</button> </div>
-            <div class="header-second-image"><img src="images/header-snow.jpg" alt="placeholder" id="header-img"></div>
+            <div class="header-second-info"> 
+                <div class="header-second-info-welcome">Welcome to Memories</div> 
+                <div>Your world, my lens.</div> 
+                <button id="header-btn">Sign Up</button> 
+            </div>
+            <div class="header-second-image"><img src="images/himalayas.JPG" alt="placeholder" id="header-img"></div>
         </div>
     </div>
     <div class="info">
-        <div class="info-header"></div>
+        <div class="info-header">My Work</div>
         <div class="cards">
-            <div class="card"></div>
-            <div class="card"></div>
-            <div class="card"></div>
-            <div class="card"></div>
+            <div class="card">
+                <img src="images/img2.jpg" alt="">
+                <div class="card-text"> Abstract Architecture</div>
+            </div>
+            <div class="card">
+                <img src="images/img3.jpg" alt="">
+                <div class="card-text"> White House</div>
+            </div>
+            <div class="card">
+                <img src="images/img4.jpg" alt="">
+                <div class="card-text">Streets of Goa</div>
+            </div>
+            <div class="card">
+                <img src="images/img5.jpg" alt="">
+                <div class="card-text">San Diego</div>
+            </div>
         </div>
+
     </div>
     <div class="quote-bg">
         <div class="quote">The eye should learn to listen, before it looks.</div>
@@ -37,10 +57,13 @@
     </div>
     <div class="signup">
         <div class="banner">
-            <div class="call"> <span> Call to action! It's time!</span>  <br> Sign up by clicking here!</div>
-            <button>Sign Up</button>
+            <div class="call"> 
+                <div class="call-header"> Want to capture some memories?</div>  
+                <div>Book your shoot now.</div>
+            </div>
+            <button>Book</button>
         </div>
     </div>
-    <div class="footer">Copyright &copy; The Odin Project 2021</div>
+    <div class="footer">Copyright &copy; Gagan Deep Gopalaiah 2021</div>
 </body>
 </html>
